Resolve issue with images not showing, and resolve duplicate image bug.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-#concordeDiv, #bridgeKeeper, #lancelotDiv, #arthurDiv, #rabbitDiv, #grailDiv, #witchDiv, #gallahadDiv, #robinDiv, #zootDiv, #blackKnight, #godDiv, #timDiv,#niKnight, #bedevereDiv, #frenchDiv {
-  display: none;
-}
-  
 #codeMatch {
   display: none;
 }
